tests/ValidProofs/negE.fitch
|¬x
|x
|---
|⊥ (¬E) 2,1