tests/InvalidRules/negI2%3.fitch
|---
||P(x)
||---
||⊥ (⊤I)
|¬P(y) (¬I) 1-2
